--- a/Cyrusportfolio/index.html
+++ b/Cyrusportfolio/index.html
@@ -16,7 +16,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CYRUS</title>
+    <title>Tech Baron</title>
   </head>
   <body>
     <script
